[gd_scene load_steps=11 format=2]

[ext_resource path="res://Animations/Idle/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Images/Items/Shield.png" type="Texture" id=3]
[ext_resource path="res://Images/Items/Sword.png" type="Texture" id=4]
[ext_resource path="res://Scripts/PARRY_AREA.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 5 )

[sub_resource type="Animation" id=4]
resource_name = "Parrying"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("HOLDER/ITEMS_HOLDER/SHIELD:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -45, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HOLDER/ITEMS_HOLDER/SHIELD:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HOLDER/ITEMS_HOLDER/SHIELD:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HOLDER/ITEMS_HOLDER/SHIELD:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HOLDER/ITEMS_HOLDER/SHIELD:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -14, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}

[sub_resource type="Animation" id=2]
resource_name = "Sword_Attack"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 75, -0.25, 0, 0.25, 0, -75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.25, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1.25, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=3]
resource_name = "Sword_recovery"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -10, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -75, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Player" type="KinematicBody2D" groups=["PLAYER"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DASH" type="Timer" parent="."]

[node name="HOLDER" type="Node2D" parent="."]

[node name="SWORD_ATK" type="Area2D" parent="HOLDER"]
position = Vector2( 0, -24 )

[node name="Collision" type="CollisionPolygon2D" parent="HOLDER/SWORD_ATK"]
position = Vector2( 0, 6 )
polygon = PoolVector2Array( 0, 8, 28, 6, 28, -4, 12, -10, -12, -10, -28, -4, -28, 6 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="HOLDER"]
visible = false
margin_left = -28.0
margin_top = -46.0
margin_right = 28.0
margin_bottom = -24.0

[node name="ITEMS_HOLDER" type="Sprite" parent="HOLDER"]

[node name="SWORD" type="Sprite" parent="HOLDER/ITEMS_HOLDER"]
position = Vector2( 6, -2 )
texture = ExtResource( 4 )
offset = Vector2( 0, -6 )

[node name="SHIELD" type="Sprite" parent="HOLDER/ITEMS_HOLDER"]
position = Vector2( -6, -2 )
rotation = -0.785398
texture = ExtResource( 3 )

[node name="PARRY_AREA" type="Area2D" parent="HOLDER"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HOLDER/PARRY_AREA"]
position = Vector2( 0, -15 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Parrying = SubResource( 4 )
anims/Sword_Attack = SubResource( 2 )
anims/Sword_recovery = SubResource( 3 )

[connection signal="timeout" from="DASH" to="." method="_on_DASH_timeout"]
[connection signal="body_entered" from="HOLDER/SWORD_ATK" to="." method="_on_SWORD_ATK_body_entered"]
[connection signal="area_entered" from="HOLDER/PARRY_AREA" to="HOLDER/PARRY_AREA" method="_on_PARRY_AREA_area_entered"]
[connection signal="area_exited" from="HOLDER/PARRY_AREA" to="HOLDER/PARRY_AREA" method="_on_PARRY_AREA_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
